--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,17 @@
 html {
-	min-height: 100vh;
-	background: rgb(30,30,30);
-	background: -moz-linear-gradient(-45deg, rgba(30,30,30,1) 0%, rgba(70,70,70,1) 100%);
-	background: -webkit-linear-gradient(-45deg, rgba(30,30,30,1) 0%,rgba(70,70,70,1) 100%);
-	background: linear-gradient(135deg, rgba(30,30,30,1) 0%,rgba(70,70,70,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e1e', endColorstr='#464646',GradientType=1 );
-	color: #fff;
-	font-family: sans-serif;
+    min-height: 100vh;
+    background-image: url(../img/wdl-bg-gray.jpg);
+    color: #fff;
+    font-family: sans-serif;
+    background-size: cover;
+    background-blend-mode: darken;
+    background-color: #ff5e00;
+    background-repeat: no-repeat;
 }
 
 body {
 	text-align: center;
+	font-family: "Roboto";
 }
 
 h1 {
